Borre en la linea 71

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="carousel-caption container">
                         <h6 class="tag-cover-9"> Deportes</h6>
                         <h3 class="title-cover-9">Futbol</h3>
-                        <p class="para-cover-9">El proyecto consistía en una competición donde 15 clubes fundadores disputarían un torneo continental anual, en el que ellos tendrían un cupo fijo y se permitiría la participación de cinco clubes más.</p>
+                        <p class="para-cover-9">.</p>
 
                     </div>
                 </div>
