agregamnos un parrafo en el pie de pagina

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     </div>
     <div class="fixed-footer">
         <h1>Equipo 3</h1>
-        <p>Modificaciones de ramas</p>
+        <p>Ramas configuracion</p>
+        
 
     </div>
 
